
  * New upstream development release.
  * debian/control:
    - libsbuild-dev is in section libdevel.
    - Build-Depend on Boost 1.37.
    - Build-Depend on debhelper v7.
    - Update to Standards Version 3.8.1.
  * debian/compat: Use debhelper v7 compatibility mode.
  * debian/rules:
    - Use dh_prep in place of dh_clean -k.
    - Configure with --with-bash-completion-dir.
  * schroot: Install bash completion.
  * schroot.conf: Use current distribution names (lenny and squeeze
    in place of sarge and etch (Closes: #516272).
  * sbuild-session.cc: Fix potential memory leak in is_group_member()
    (Closes: #517223).
  * schroot-script-config.5, schroot-setup.5: Fix typos
    (Closes: #517041).  Thanks to Loïc Minier.
  * schroot now ignores backup files (including dpkg conffile backups)
    in /etc/schroot/chroot.d (Closes: #513307, #496629).

 -- Roger Leigh <rleigh@debian.org>  Sat, 21 Mar 2009 15:58:58 +0000

schroot (1.2.1-1) unstable; urgency=low

  * New upstream stable release.
  * debian/control:
    - Upgrade to Standards-Version 3.8.0.
    - Don't Build-Depend upon -1 Debian revisions.
  * po:
    - Update eu translation (Closes: #479498).  Thanks to Piarres Beobide.
    - Update fr translation (Closes: #481648).  Thanks to Nicolas François.
    - Update pt translation (Closes: #480640).  Thanks to Pedro Ribeiro.
    - Update vi translation (Closes: #479750).  Thanks to Clytie Siddall.
    - Add zh_CN translation (Closes: #480174).  Thanks to LI Daobing (李道兵).
    - Update zh_CN translation.  Thanks to Ji ZhengYu.
  * sbuild/sbuild-lock.cc: Order of "struct flock" members is not assumed,
    for GNU/kFreeBSD portability (Closes: #485637).  Thanks to Petr
    Salinger.
  * schroot.1.in, schroot.conf.5.in: Document /etc/schroot/chroot.d
    (Closes: #487588).
  * setup/10mount: Don't clear mount options for LVM snapshots
    (Closes: #488726).
  * New "loopback" chroot type allows loopback mounting of files
    (Closes: #475515).
