@@ -24,7 +24,17 @@ debian/build/config.status: configure
 
 	mkdir debian/build; \
 	cd debian/build; \
-	CFLAGS="$(CFLAGS)" ../../configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib --localstatedir=/var --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --enable-dchroot --enable-dchroot-dsa --enable-static --disable-shared --with-bash-completion-dir=/etc/bash_completion.d
+	CFLAGS="$(CFLAGS)" ../../configure \
+	  --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
+	  --prefix=/usr \
+	  --sysconfdir=/etc \
+	  --libexecdir=/usr/lib \
+	  --localstatedir=/var \
+	  --mandir=\$${prefix}/share/man \
+	  --infodir=\$${prefix}/share/info \
+	  --enable-dchroot --enable-dchroot-dsa \
+	  --enable-static --disable-shared \
+	  --with-bash-completion-dir=/etc/bash_completion.d
 
 build: build-stamp
 
