@@ -10,6 +10,7 @@ schroot (1.3.0-1) experimental; urgency=low
   * debian/rules:
     - Use dh_prep in place of dh_clean -k.
     - Configure with --with-bash-completion-dir.
+    - Split configure invocation onto multiple lines.
   * schroot: Install bash completion.
   * schroot.conf: Use current distribution names (lenny and squeeze
     in place of sarge and etch (Closes: #516272).
@@ -20,7 +21,7 @@ schroot (1.3.0-1) experimental; urgency=low
   * schroot now ignores backup files (including dpkg conffile backups)
     in /etc/schroot/chroot.d (Closes: #513307, #496629).
 
- -- Roger Leigh <rleigh@debian.org>  Sat, 21 Mar 2009 15:58:58 +0000
+ -- Roger Leigh <rleigh@debian.org>  Sat, 21 Mar 2009 16:32:04 +0000
 
 schroot (1.2.1-1) unstable; urgency=low
 
